package modele.equipements;

import java.awt.*;// import pour les images (a voir)

public abstract class Equipement {
    private Image image;

}
