package modele.serializer;

import modele.score.TableauScore;

import java.io.IOException;

public abstract class Chargeur {
    public TableauScore chargerDonnee() {return null;}

}
