package modele.serializer;

import modele.score.Score;

public abstract class Sauvegarder {

    public void SauvegarderDonnee(Score score){}

}
