@startuml

title __PROJET25_JFX_2020_2021's Class Diagram__\n

  namespace data {
    class data.Stub {
    }
  }
  

  namespace launch {
    class launch.Launch {
    }
  }
  

  namespace modele {
    class modele.Carte {
    }
  }
  

  namespace modele {
    class modele.Manager {
    }
  }
  

  namespace modele {
    namespace boucleur {
      abstract class modele.boucleur.Boucleur {
      }
    }
  }
  

  namespace modele {
    namespace boucleur {
      class modele.boucleur.BoucleurSimple {
      }
    }
  }
  

  namespace modele {
    namespace collisionneur {
      abstract class modele.collisionneur.Collisionneur {
      }
    }
  }
  

  namespace modele {
    namespace collisionneur {
      class modele.collisionneur.CollisionneurIA {
      }
    }
  }
  

  namespace modele {
    namespace collisionneur {
      class modele.collisionneur.CollisionneurSimple {
      }
    }
  }
  

  namespace modele {
    namespace createur {
      abstract class modele.createur.CreateurEntite {
      }
    }
  }
  

  namespace modele {
    namespace createur {
      class modele.createur.CreateurSimple {
      }
    }
  }
  

  namespace modele {
    namespace deplaceur {
      abstract class modele.deplaceur.Deplaceur {
      }
    }
  }
  

  namespace modele {
    namespace deplaceur {
      class modele.deplaceur.DeplaceurIA {
      }
    }
  }
  

  namespace modele {
    namespace deplaceur {
      class modele.deplaceur.DeplaceurSimple {
      }
    }
  }
  

  namespace modele {
    namespace entite {
      abstract class modele.entite.Entite {
      }
    }
  }
  

  namespace modele {
    namespace entite {
      class modele.entite.Rocher {
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace equipements {
        abstract class modele.entite.equipements.Equipement {
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace equipements {
        namespace armes {
          abstract class modele.entite.equipements.armes.Arme {
          }
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace equipements {
        namespace protections {
          class modele.entite.equipements.protections.Combinaison {
          }
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace equipements {
        namespace protections {
          class modele.entite.equipements.protections.Masque {
          }
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace equipements {
        namespace protections {
          abstract class modele.entite.equipements.protections.Protection {
          }
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace equipements {
        namespace protections {
          class modele.entite.equipements.protections.Visiere {
          }
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace personnages {
        class modele.entite.personnages.IA {
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace personnages {
        class modele.entite.personnages.PersoPrincipal {
        }
      }
    }
  }
  

  namespace modele {
    namespace entite {
      namespace personnages {
        abstract class modele.entite.personnages.Personnage {
        }
      }
    }
  }
  

  namespace modele {
    namespace ramasseur {
      abstract class modele.ramasseur.Ramasseur {
      }
    }
  }
  

  namespace modele {
    namespace ramasseur {
      class modele.ramasseur.RamasseurSimple {
      }
    }
  }
  

  namespace modele {
    namespace score {
      class modele.score.Score {
      }
    }
  }
  

  namespace modele {
    namespace score {
      class modele.score.TableauScore {
      }
    }
  }
  

  namespace modele {
    namespace serializer {
      abstract class modele.serializer.Chargeur {
      }
    }
  }
  

  namespace modele {
    namespace serializer {
      class modele.serializer.ChargeurFile {
      }
    }
  }
  

  namespace modele {
    namespace serializer {
      abstract class modele.serializer.Sauvegarder {
      }
    }
  }
  

  namespace modele {
    namespace serializer {
      class modele.serializer.SauvegarderFile {
      }
    }
  }
  

  namespace modele {
    namespace spawner {
      abstract class modele.spawner.Spawner {
      }
    }
  }
  

  namespace modele {
    namespace spawner {
      class modele.spawner.SpawnerSimple {
      }
    }
  }
  

  namespace testConsole {
    class testConsole.Console {
    }
  }
  

  namespace view {
    class view.GameOverView {
    }
  }
  

  namespace view {
    class view.Informations {
    }
  }
  

  namespace view {
    class view.MainWindow {
    }
  }
  

  namespace view {
    class view.PartieVue {
    }
  }
  

  namespace view {
    class view.SetupPartie {
    }
  }
  

  namespace view {
    class view.TableauScores {
    }
  }
  

  launch.Launch -up-|> javafx.application.Application
  modele.Manager .up.|> javafx.beans.InvalidationListener
  modele.Manager o-- modele.Carte : carte
  modele.Manager o-- modele.boucleur.Boucleur : leBoucleur
  modele.Manager o-- modele.collisionneur.Collisionneur : leCollisionneur
  modele.Manager o-- modele.collisionneur.Collisionneur : leCollisionneurIA
  modele.Manager o-- modele.createur.CreateurEntite : leCreateur
  modele.Manager o-- modele.deplaceur.Deplaceur : leDeplaceur
  modele.Manager o-- modele.deplaceur.Deplaceur : leDeplaceurIA
  modele.Manager o-- modele.ramasseur.Ramasseur : leRamasseur
  modele.Manager o-- modele.serializer.SauvegarderFile : leSerializer
  modele.Manager o-- modele.spawner.Spawner : leSpawner
  modele.Manager o-- modele.entite.personnages.PersoPrincipal : perso
  modele.boucleur.Boucleur .up.|> java.lang.Runnable
  modele.boucleur.Boucleur .up.|> javafx.beans.Observable
  modele.boucleur.BoucleurSimple -up-|> modele.boucleur.Boucleur
  modele.collisionneur.Collisionneur o-- modele.Carte : laCarte
  modele.collisionneur.Collisionneur o-- modele.Manager : leManager
  modele.collisionneur.CollisionneurIA -up-|> modele.collisionneur.Collisionneur
  modele.collisionneur.CollisionneurSimple -up-|> modele.collisionneur.Collisionneur
  modele.createur.CreateurSimple -up-|> modele.createur.CreateurEntite
  modele.deplaceur.Deplaceur o-- modele.collisionneur.Collisionneur : leCollisionneur
  modele.deplaceur.Deplaceur o-- modele.ramasseur.Ramasseur : leRamasseur
  modele.deplaceur.DeplaceurIA -up-|> modele.deplaceur.Deplaceur
  modele.deplaceur.DeplaceurSimple -up-|> modele.deplaceur.Deplaceur
  modele.entite.Rocher -up-|> modele.entite.Entite
  modele.entite.equipements.Equipement -up-|> modele.entite.Entite
  modele.entite.equipements.armes.Arme -up-|> modele.entite.equipements.Equipement
  modele.entite.equipements.protections.Combinaison -up-|> modele.entite.equipements.protections.Protection
  modele.entite.equipements.protections.Masque -up-|> modele.entite.equipements.protections.Protection
  modele.entite.equipements.protections.Protection -up-|> modele.entite.equipements.Equipement
  modele.entite.equipements.protections.Visiere -up-|> modele.entite.equipements.protections.Protection
  modele.entite.personnages.IA -up-|> modele.entite.personnages.Personnage
  modele.entite.personnages.PersoPrincipal -up-|> modele.entite.personnages.Personnage
  modele.entite.personnages.PersoPrincipal o-- modele.entite.equipements.armes.Arme : a
  modele.entite.personnages.PersoPrincipal o-- modele.entite.equipements.protections.Protection : p
  modele.entite.personnages.Personnage -up-|> modele.entite.Entite
  modele.ramasseur.Ramasseur o-- modele.Carte : laCarte
  modele.ramasseur.RamasseurSimple -up-|> modele.ramasseur.Ramasseur
  modele.score.Score .up.|> java.io.Serializable
  modele.score.TableauScore .up.|> java.io.Serializable
  modele.serializer.ChargeurFile -up-|> modele.serializer.Chargeur
  modele.serializer.SauvegarderFile -up-|> modele.serializer.Sauvegarder
  modele.spawner.SpawnerSimple -up-|> modele.spawner.Spawner
  view.TableauScores .up.|> java.io.Serializable
  view.TableauScores o-- data.Stub : stub
  view.TableauScores o-- modele.score.TableauScore : tabScore


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
